--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </div>
             </div>
             <div class="mt-8 pt-8 border-t border-gray-800 text-center text-gray-400">
-                <p>&copy; 2025 Your Name. All rights reserved.</p>
+                <p>&copy; 2025 Wilson Magesa. All rights reserved.</p>
             </div>
         </div>
     </footer>
