--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <!-- Project Card 1 -->
                 <div class="bg-gray-800 rounded-xl p-6 hover-up">
                     <div class="relative mb-6">
-                        <img src="/api/placeholder/600/400" alt="Project 1" class="rounded-lg w-full">
+                        <img src="https://th.bing.com/th/id/OIP.ONwBFENLY7DhAj5JfHyDPwHaE8?rs=1&pid=ImgDetMain" alt="Project 1" class="rounded-lg w-full">
                         <div class="absolute top-4 right-4">
                             <span class="bg-indigo-600 text-white px-4 py-1 rounded-full text-sm">IoT</span>
                         </div>
@@ -114,7 +114,7 @@
                 <!-- Project Card 2 -->
                 <div class="bg-gray-800 rounded-xl p-6 hover-up">
                     <div class="relative mb-6">
-                        <img src="/api/placeholder/600/400" alt="Project 2" class="rounded-lg w-full">
+                        <img src="https://th.bing.com/th/id/OIP.qYIDWiAh8Ou2KtgUX_pRNQHaEK?rs=1&pid=ImgDetMain" alt="Project 2" class="rounded-lg w-full">
                         <div class="absolute top-4 right-4">
                             <span class="bg-indigo-600 text-white px-4 py-1 rounded-full text-sm">Robotics</span>
                         </div>
@@ -131,7 +131,7 @@
                 <!-- Project Card 3 -->
                 <div class="bg-gray-800 rounded-xl p-6 hover-up">
                     <div class="relative mb-6">
-                        <img src="/api/placeholder/600/400" alt="Project 3" class="rounded-lg w-full">
+                        <img src="https://th.bing.com/th/id/OIP.X2RnxZ76u_UmnQ7-NuGCSgHaEP?rs=1&pid=ImgDetMain" alt="Project 3" class="rounded-lg w-full">
                         <div class="absolute top-4 right-4">
                             <span class="bg-indigo-600 text-white px-4 py-1 rounded-full text-sm">AI</span>
                         </div>
