--- a/index.html
+++ b/index.html
@@ -200,39 +200,60 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="py-32 bg-gray-900">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="max-w-3xl mx-auto">
-                <h2 class="text-4xl font-bold mb-16 text-center">
-                    <span class="gradient-text">Let's Connect</span>
-                </h2>
-                <div class="glass-effect rounded-xl p-8">
-                    <form class="space-y-6">
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                            <div>
-                                <label class="block text-sm font-medium mb-2">Name</label>
-                                <input type="text" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:ring-2 focus:ring-indigo-500 border-none">
-                            </div>
-                            <div>
-                                <label class="block text-sm font-medium mb-2">Email</label>
-                                <input type="email" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:ring-2 focus:ring-indigo-500 border-none">
-                            </div>
+<!-- Contact Section -->
+<section id="contact" class="py-32 bg-gray-900">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="max-w-3xl mx-auto">
+            <h2 class="text-4xl font-bold mb-16 text-center">
+                <span class="gradient-text bg-gradient-to-r from-indigo-500 to-purple-500 bg-clip-text text-transparent">Let's Connect</span>
+            </h2>
+            <div class="glass-effect rounded-xl p-8 shadow-lg bg-gray-800 bg-opacity-75">
+                <form id="form" class="space-y-6">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div>
+                            <label for="name" class="block text-sm font-medium text-gray-300">Name</label>
+                            <input 
+                                type="text" 
+                                name="name" 
+                                id="name" 
+                                class="w-full px-4 py-3 bg-gray-700 text-white rounded-lg focus:ring-2 focus:ring-indigo-500 border-none" 
+                                placeholder="Your Full Name" 
+                                required>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium mb-2">Message</label>
-                            <textarea rows="4" class="w-full px-4 py-3 bg-gray-800 rounded-lg focus:ring-2 focus:ring-indigo-500 border-none"></textarea>
+                            <label for="email" class="block text-sm font-medium text-gray-300">Email</label>
+                            <input 
+                                type="email" 
+                                name="email" 
+                                id="email" 
+                                class="w-full px-4 py-3 bg-gray-700 text-white rounded-lg focus:ring-2 focus:ring-indigo-500 border-none" 
+                                placeholder="Your Email Address" 
+                                required>
                         </div>
-                        <div>
-                            <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white px-8 py-3 rounded-lg transition-colors">
-                                Send Message
-                            </button>
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                    <div>
+                        <label for="message" class="block text-sm font-medium text-gray-300">Message</label>
+                        <textarea 
+                            rows="4" 
+                            name="message" 
+                            id="message" 
+                            class="w-full px-4 py-3 bg-gray-700 text-white rounded-lg focus:ring-2 focus:ring-indigo-500 border-none" 
+                            placeholder="Write your message here..." 
+                            required></textarea>
+                    </div>
+                    <div>
+                        <!-- Submit button as input -->
+                        <input 
+                            type="submit" 
+                            id="button" 
+                            value="Send Message"
+                            class="w-full bg-gradient-to-r from-indigo-500 to-purple-500 hover:from-purple-500 hover:to-indigo-500 text-white font-bold px-8 py-3 rounded-lg transition-all">
+                    </div>
+                </form>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer class="bg-black py-12">
@@ -259,7 +280,14 @@
         </div>
     </footer>
 
- <script>
+    
+        <!-- Include EmailJS SDK -->
+    <script type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+<!-- <script src="script.js"></script> -->
+ <script type="text/javascript">
     // Initialize GSAP ScrollTrigger
         gsap.registerPlugin(ScrollTrigger);
 
@@ -425,6 +453,68 @@
                 }, 300);
             }, 1000);
         });
+
+
+        // // EmailJS integration
+        // const btn = document.getElementById('button');
+
+        // // Initialize EmailJS
+        // emailjs.init('9CgWJJ7sLxUBeKcq0'); // Replace with your EmailJS Public Key
+
+        // // Handle form submission
+        // document.getElementById('contact_form').addEventListener('submit', function (event) {
+        //     event.preventDefault(); // Prevent default form submission
+
+        //     btn.innerText = 'Sending...'; // Update button text
+
+        //     const serviceID = 'default_service'; // Replace with your EmailJS Service ID
+        //     const templateID = 'template_h8qv0qu'; // Replace with your EmailJS Template ID
+
+        //     // Send the form data
+        //     emailjs.sendForm(serviceID, templateID, this).then(
+        //         () => {
+        //             btn.innerText = 'Send Message'; // Reset button text
+        //             alert('Email successfully sent!'); // Success alert
+        //             this.reset(); // Reset the form
+        //         },
+        //         (err) => {
+        //             btn.innerText = 'Send Message'; // Reset button text
+        //             alert('Error sending message: ' + JSON.stringify(err)); // Error alert
+        //         }
+        //     );
+        // });
+
+
  </script>
+
+<script type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+<script type="text/javascript">
+  emailjs.init('9CgWJJ7sLxUBeKcq0')
+</script>
+
+<script type="text/javascript">
+    const btn = document.getElementById('button');
+
+document.getElementById('form')
+ .addEventListener('submit', function(event) {
+   event.preventDefault();
+
+   btn.value = 'Sending...';
+
+   const serviceID = 'default_service';
+   const templateID = 'template_h8qv0qu';
+
+   emailjs.sendForm(serviceID, templateID, this)
+    .then(() => {
+      btn.value = 'Send Email';
+      alert('Sent!');
+    }, (err) => {
+      btn.value = 'Send Email';
+      alert(JSON.stringify(err));
+    });
+});
+</script>
 </body>
 </html>
