--- a/index.html
+++ b/index.html
@@ -51,211 +51,161 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section id="home" class="min-h-screen relative overflow-hidden">
-        <div class="absolute inset-0 bg-gradient-to-br from-gray-900 to-black"></div>
-        <div class="absolute inset-0">
-            <div class="h-full w-full opacity-30">
-                <div class="absolute inset-0 bg-[radial-gradient(circle_at_50%_50%,_rgba(79,70,229,0.2),transparent_50%)]"></div>
-            </div>
-        </div>
-        <div class="relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-32">
-            <div class="lg:grid lg:grid-cols-2 lg:gap-8 items-center">
-                <div class="mb-12 lg:mb-0">
-                    <h1 class="text-5xl md:text-7xl font-bold mb-6">
-                        <span class="gradient-text">Software</span> & 
-                        <span class="gradient-text">IoT</span> Developer
-                    </h1>
-                    <p class="text-gray-400 text-xl mb-8">
-                        Transforming complex ideas into elegant solutions through innovative technology and creative engineering.
-                    </p>
-                    <div class="flex space-x-4">
-                        <a href="#work" class="bg-indigo-600 hover:bg-indigo-700 text-white px-8 py-3 rounded-full transition-colors">
-                            View Projects
-                        </a>
-                        <a href="#contact" class="border border-indigo-600 text-indigo-600 hover:bg-indigo-600 hover:text-white px-8 py-3 rounded-full transition-colors">
-                            Contact Me
-                        </a>
-                    </div>
-                </div>
-                <div class="relative">
-                    <div class="aspect-w-16 aspect-h-9">
-                        <img src="https://media.istockphoto.com/id/1407983911/photo/forex-diagrams-and-stock-market-rising-lines-with-numbers.jpg?s=612x612&w=0&k=20&c=zas1h6LR6v2iCvE7SWnVoZ_s7ZSiboN45UK0d5oMWac=" alt="Hero" class="rounded-2xl shadow-2xl">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Work Section -->
-    <section id="work" class="py-32 bg-gray-900">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-4xl font-bold mb-16 text-center">
-                <span class="gradient-text">Featured Projects</span>
-            </h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Project Card 1 -->
-                <div class="bg-gray-800 rounded-xl p-6 hover-up">
-                    <div class="relative mb-6">
-                        <img src="https://th.bing.com/th/id/OIP.ONwBFENLY7DhAj5JfHyDPwHaE8?rs=1&pid=ImgDetMain" alt="Project 1" class="rounded-lg w-full">
-                        <div class="absolute top-4 right-4">
-                            <span class="bg-indigo-600 text-white px-4 py-1 rounded-full text-sm">IoT</span>
-                        </div>
-                    </div>
-                    <h3 class="text-xl font-bold mb-3">Smart Home Automation</h3>
-                    <p class="text-gray-400 mb-4">Advanced home automation system with AI-powered controls and energy optimization.</p>
-                    <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Python</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">TensorFlow</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">IoT</span>
-                    </div>
-                </div>
-
-                <!-- Project Card 2 -->
-                <div class="bg-gray-800 rounded-xl p-6 hover-up">
-                    <div class="relative mb-6">
-                        <img src="https://th.bing.com/th/id/OIP.qYIDWiAh8Ou2KtgUX_pRNQHaEK?rs=1&pid=ImgDetMain" alt="Project 2" class="rounded-lg w-full">
-                        <div class="absolute top-4 right-4">
-                            <span class="bg-indigo-600 text-white px-4 py-1 rounded-full text-sm">Robotics</span>
-                        </div>
-                    </div>
-                    <h3 class="text-xl font-bold mb-3">Industrial Automation</h3>
-                    <p class="text-gray-400 mb-4">Robotic process automation for manufacturing with real-time monitoring.</p>
-                    <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">ROS</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">C++</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Computer Vision</span>
-                    </div>
-                </div>
-
-                <!-- Project Card 3 -->
-                <div class="bg-gray-800 rounded-xl p-6 hover-up">
-                    <div class="relative mb-6">
-                        <img src="https://th.bing.com/th/id/OIP.X2RnxZ76u_UmnQ7-NuGCSgHaEP?rs=1&pid=ImgDetMain" alt="Project 3" class="rounded-lg w-full">
-                        <div class="absolute top-4 right-4">
-                            <span class="bg-indigo-600 text-white px-4 py-1 rounded-full text-sm">AI</span>
-                        </div>
-                    </div>
-                    <h3 class="text-xl font-bold mb-3">AI Analytics Platform</h3>
-                    <p class="text-gray-400 mb-4">Enterprise-grade analytics platform with machine learning capabilities.</p>
-                    <div class="flex flex-wrap gap-2">
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">Python</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">TensorFlow</span>
-                        <span class="px-3 py-1 bg-gray-700 rounded-full text-sm">AWS</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Expertise Section -->
-    <section id="expertise" class="py-32 bg-black">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-4xl font-bold mb-16 text-center">
-                <span class="gradient-text">Technical Expertise</span>
-            </h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
-                <!-- Expertise Card 1 -->
-                <div class="glass-effect rounded-xl p-8 hover-up">
-                    <div class="text-indigo-500 mb-6">
-                        <i class="fas fa-code text-4xl"></i>
-                    </div>
-                    <h3 class="text-xl font-bold mb-4">Software Development</h3>
-                    <ul class="space-y-3 text-gray-400">
-                        <li>• Full-stack Development</li>
-                        <li>• API Design & Integration</li>
-                        <li>• Cloud Architecture</li>
-                        <li>• Performance Optimization</li>
-                    </ul>
-                </div>
-
-                <!-- Expertise Card 2 -->
-                <div class="glass-effect rounded-xl p-8 hover-up">
-                    <div class="text-indigo-500 mb-6">
-                        <i class="fas fa-microchip text-4xl"></i>
-                    </div>
-                    <h3 class="text-xl font-bold mb-4">IoT & Robotics</h3>
-                    <ul class="space-y-3 text-gray-400">
-                        <li>• Sensor Integration</li>
-                        <li>• Robotic Process Automation</li>
-                        <li>• Embedded Systems</li>
-                        <li>• Real-time Control Systems</li>
-                    </ul>
-                </div>
-
-                <!-- Expertise Card 3 -->
-                <div class="glass-effect rounded-xl p-8 hover-up">
-                    <div class="text-indigo-500 mb-6">
-                        <i class="fas fa-brain text-4xl"></i>
-                    </div>
-                    <h3 class="text-xl font-bold mb-4">AI & Machine Learning</h3>
-                    <ul class="space-y-3 text-gray-400">
-                        <li>• Computer Vision</li>
-                        <li>• Natural Language Processing</li>
-                        <li>• Predictive Analytics</li>
-                        <li>• Deep Learning Models</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-<!-- Contact Section -->
-<section id="contact" class="py-32 bg-gray-900">
+    <!-- About Section -->
+<section id="about" class="py-32 bg-black">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="max-w-3xl mx-auto">
-            <h2 class="text-4xl font-bold mb-16 text-center">
-                <span class="gradient-text bg-gradient-to-r from-indigo-500 to-purple-500 bg-clip-text text-transparent">Let's Connect</span>
-            </h2>
-            <div class="glass-effect rounded-xl p-8 shadow-lg bg-gray-800 bg-opacity-75">
-                <form id="form" class="space-y-6">
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                        <div>
-                            <label for="name" class="block text-sm font-medium text-gray-300">Name</label>
-                            <input 
-                                type="text" 
-                                name="name" 
-                                id="name" 
-                                class="w-full px-4 py-3 bg-gray-700 text-white rounded-lg focus:ring-2 focus:ring-indigo-500 border-none" 
-                                placeholder="Your Full Name" 
-                                required>
+        <div class="lg:grid lg:grid-cols-2 lg:gap-16 items-center">
+            <div class="mb-12 lg:mb-0">
+                <h2 class="text-4xl font-bold mb-6">
+                    <span class="gradient-text">About Me</span>
+                </h2>
+                <p class="text-gray-400 text-lg mb-6">
+                    With over a decade of experience in software development and IoT solutions, I specialize in bridging the gap between complex technical challenges and practical business solutions. My passion lies in creating innovative systems that drive efficiency and growth.
+                </p>
+                <div class="space-y-4">
+                    <div class="flex items-center space-x-4">
+                        <div class="text-indigo-500">
+                            <i class="fas fa-award text-2xl"></i>
                         </div>
                         <div>
-                            <label for="email" class="block text-sm font-medium text-gray-300">Email</label>
-                            <input 
-                                type="email" 
-                                name="email" 
-                                id="email" 
-                                class="w-full px-4 py-3 bg-gray-700 text-white rounded-lg focus:ring-2 focus:ring-indigo-500 border-none" 
-                                placeholder="Your Email Address" 
-                                required>
+                            <h3 class="font-bold">Certified Cloud Architect</h3>
+                            <p class="text-gray-400">AWS & Azure Professional</p>
                         </div>
                     </div>
-                    <div>
-                        <label for="message" class="block text-sm font-medium text-gray-300">Message</label>
-                        <textarea 
-                            rows="4" 
-                            name="message" 
-                            id="message" 
-                            class="w-full px-4 py-3 bg-gray-700 text-white rounded-lg focus:ring-2 focus:ring-indigo-500 border-none" 
-                            placeholder="Write your message here..." 
-                            required></textarea>
+                    <div class="flex items-center space-x-4">
+                        <div class="text-indigo-500">
+                            <i class="fas fa-certificate text-2xl"></i>
+                        </div>
+                        <div>
+                            <h3 class="font-bold">IoT Solutions Expert</h3>
+                            <p class="text-gray-400">Industry 4.0 Specialist</p>
+                        </div>
                     </div>
-                    <div>
-                        <!-- Submit button as input -->
-                        <input 
-                            type="submit" 
-                            id="button" 
-                            value="Send Message"
-                            class="w-full bg-gradient-to-r from-indigo-500 to-purple-500 hover:from-purple-500 hover:to-indigo-500 text-white font-bold px-8 py-3 rounded-lg transition-all">
+                </div>
+            </div>
+            <div class="relative">
+                <div class="aspect-w-4 aspect-h-3">
+                    <img src="/api/placeholder/600/450" alt="Profile" class="rounded-2xl shadow-2xl object-cover">
+                </div>
+                <div class="absolute -bottom-6 -right-6 bg-indigo-600 text-white p-6 rounded-2xl">
+                    <div class="text-center">
+                        <h4 class="text-4xl font-bold">10+</h4>
+                        <p class="text-sm">Years Experience</p>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
 </section>
 
-    <!-- Footer -->
+<!-- Testimonials Section -->
+<section id="testimonials" class="py-32 bg-gray-900">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <h2 class="text-4xl font-bold mb-16 text-center">
+            <span class="gradient-text">Client Testimonials</span>
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Testimonial 1 -->
+            <div class="glass-effect rounded-xl p-8 hover-up">
+                <div class="flex items-center mb-6">
+                    <img src="/api/placeholder/60/60" alt="Client 1" class="rounded-full w-12 h-12 mr-4">
+                    <div>
+                        <h3 class="font-bold">Sarah Johnson</h3>
+                        <p class="text-gray-400 text-sm">CTO, TechCorp</p>
+                    </div>
+                </div>
+                <p class="text-gray-400">"Outstanding work on our IoT infrastructure. The automation solutions implemented have significantly improved our operational efficiency."</p>
+            </div>
+
+            <!-- Testimonial 2 -->
+            <div class="glass-effect rounded-xl p-8 hover-up">
+                <div class="flex items-center mb-6">
+                    <img src="/api/placeholder/60/60" alt="Client 2" class="rounded-full w-12 h-12 mr-4">
+                    <div>
+                        <h3 class="font-bold">Michael Chen</h3>
+                        <p class="text-gray-400 text-sm">CEO, AI Innovations</p>
+                    </div>
+                </div>
+                <p class="text-gray-400">"The AI analytics platform developed has transformed our decision-making process. Exceptional technical expertise and professional delivery."</p>
+            </div>
+
+            <!-- Testimonial 3 -->
+            <div class="glass-effect rounded-xl p-8 hover-up">
+                <div class="flex items-center mb-6">
+                    <img src="/api/placeholder/60/60" alt="Client 3" class="rounded-full w-12 h-12 mr-4">
+                    <div>
+                        <h3 class="font-bold">Emily Rodriguez</h3>
+                        <p class="text-gray-400 text-sm">Director, Smart Systems</p>
+                    </div>
+                </div>
+                <p class="text-gray-400">"Delivered a complex robotics solution on time and within budget. The attention to detail and technical prowess was impressive."</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Stats Section -->
+<section class="py-20 bg-black">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+            <div class="text-center">
+                <h3 class="text-4xl font-bold gradient-text">50+</h3>
+                <p class="text-gray-400 mt-2">Projects Completed</p>
+            </div>
+            <div class="text-center">
+                <h3 class="text-4xl font-bold gradient-text">30+</h3>
+                <p class="text-gray-400 mt-2">Happy Clients</p>
+            </div>
+            <div class="text-center">
+                <h3 class="text-4xl font-bold gradient-text">15+</h3>
+                <p class="text-gray-400 mt-2">Awards Won</p>
+            </div>
+            <div class="text-center">
+                <h3 class="text-4xl font-bold gradient-text">24/7</h3>
+                <p class="text-gray-400 mt-2">Support</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-gray-900 py-12">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+            <div class="col-span-2">
+                <h3 class="text-xl font-bold mb-4">Let's Build Something Amazing Together</h3>
+                <p class="text-gray-400 mb-4">Ready to transform your ideas into reality? Get in touch and let's discuss how we can help your business grow.</p>
+                <div class="flex space-x-4">
+                    <a href="#" class="text-gray-400 hover:text-indigo-500"><i class="fab fa-linkedin text-xl"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-indigo-500"><i class="fab fa-github text-xl"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-indigo-500"><i class="fab fa-twitter text-xl"></i></a>
+                </div>
+            </div>
+            <div>
+                <h4 class="font-bold mb-4">Quick Links</h4>
+                <ul class="space-y-2 text-gray-400">
+                    <li><a href="#home" class="hover:text-indigo-500">Home</a></li>
+                    <li><a href="#about" class="hover:text-indigo-500">About</a></li>
+                    <li><a href="#work" class="hover:text-indigo-500">Projects</a></li>
+                    <li><a href="#contact" class="hover:text-indigo-500">Contact</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="font-bold mb-4">Contact Info</h4>
+                <ul class="space-y-2 text-gray-400">
+                    <li><i class="fas fa-envelope mr-2"></i> contact@example.com</li>
+                    <li><i class="fas fa-phone mr-2"></i> +1 (555) 123-4567</li>
+                    <li><i class="fas fa-map-marker-alt mr-2"></i> San Francisco, CA</li>
+                </ul>
+            </div>
+        </div>
+        <div class="border-t border-gray-800 mt-12 pt-8 text-center text-gray-400">
+            <p>&copy; 2025 Your Name. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
+
+    <!-- Footer
     <footer class="bg-black py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row justify-between items-center">
@@ -278,7 +228,7 @@
                 <p>&copy; 2025 Wilson Magesa. All rights reserved.</p>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     
         <!-- Include EmailJS SDK -->
