--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-bold mb-1">Location</h3>
-                                    <p class="text-gray-400">San Francisco, CA</p>
+                                    <p class="text-gray-400">Dar es Salaam</p>
                                 </div>
                             </div>
                         </div>
@@ -572,7 +572,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-bold mb-1">Email</h3>
-                                    <p class="text-gray-400">contact@example.com</p>
+                                    <p class="text-gray-400">magesa133@gmail.com</p>
                                 </div>
                             </div>
                         </div>
@@ -583,7 +583,7 @@
                                 </div>
                                 <div>
                                     <h3 class="font-bold mb-1">Phone</h3>
-                                    <p class="text-gray-400">+1 (555) 123-4567</p>
+                                    <p class="text-gray-400">+255 614 853614</p>
                                 </div>
                             </div>
                         </div>
