--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Wilson Magesa</title>
+    <title>Developer Wilson Magesa</title>
       <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
@@ -590,10 +590,10 @@
                         <div class="glass-effect rounded-xl p-6">
                             <h3 class="font-bold mb-4">Follow Me</h3>
                             <div class="flex space-x-4">
-                                <a href="#" class="text-gray-400 hover:text-indigo-500 text-2xl">
+                                <a href="https://github.com/magesa133" class="text-gray-400 hover:text-indigo-500 text-2xl">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#" class="text-gray-400 hover:text-indigo-500 text-2xl">
+                                <a href="www.linkedin.com/in/wilson-magesa-3620432ab" class="text-gray-400 hover:text-indigo-500 text-2xl">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
                                 <a href="#" class="text-gray-400 hover:text-indigo-500 text-2xl">
