--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                                     <i class="fas fa-phone"></i>
                                 </div>
                                 <div>
-                                    <h3 class="font-bold mb-1">Phone</h3>
+                                    <h3 class="font-bold mb-1">Phone (WhatsApp and Normal Call)</h3>
                                     <p class="text-gray-400">+255 614 853614</p>
                                 </div>
                             </div>
